# gbhed

./: .clang-format  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  VERSION  aclocal.m4  configure  configure.ac  gBhed-0.13.1.patch  gBhed.desktop
autom4te.cache/: output.0  requests  traces.0
doc/: Makefile.am  Makefile.in  abtranslate.1.in  gbhed.1.in
gaim-plugin/: albhed.pl
pixmaps/: Makefile.am  Makefile.in  rikku_icon.xpm  rikku_icon2.xpm
pixmaps/.xvpics/: rikku_icon.xpm  rikku_icon2.xpm
src/: Makefile.am  Makefile.in  abtranslate.c  abtranslate.cpp  abtranslate2  abtranslate3  albhed.c  albhed.cpp  albhed.h  albhed.old.h  cipher_tables.h  gmon.out  vector_string.c  vector_string.h
src/backups/: abtranslate.c  albhed.c  albhed.h  cipher_tables.h  vector_string.h
src/gui/: Makefile.am  Makefile.in  gbhed.c  gbhed2  test  translation_fork.c  translation_fork.h
src/gui/.xvpics/: rikkubackground.xpm
src/gui/backups/: Makefile  Makefile.am  Makefile.in  gbhed  gbhed.c  test  test.c  translation_fork.c  translation_fork.h
src/gui/test_pipe/: translation_fork.c
